Completed landing page assignment

--- a/index.html
+++ b/index.html
@@ -14,31 +14,88 @@
     <header class="header">
       <div class="header-logo">Header Logo</div>
       <ul class="header-links">
-        <li>About</li>
-        <li>Shop</li>
-        <li>Contact</li>
+        <li class="header-link">About</li>
+        <li class="header-link">Shop</li>
+        <li class="header-link">Contact</li>
       </ul>
     </header>
     <section class="content">
-      <div class="site-information">
-        <div class="site-description">
-          <div class="description-container">
-            <div class="main-title">This website is awesome</div>
-            <div class="subtext">
-              This website has some subtext that goes here under the main title.
-              It's a smaller font and the color is lower contrast
-            </div>
-            <button class="sign-up">Sign Up</button>
+      <div class="site-description">
+        <div class="description-container">
+          <div class="main-title">This website is awesome</div>
+          <div class="subtext">
+            This website has some subtext that goes here under the main title.
+            It's a smaller font and the color is lower contrast
           </div>
-          <div class="image-container">
-            <img
-              class="image"
-              src="https://images.pexels.com/photos/1543793/pexels-photo-1543793.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
-              alt=""
-            />
-          </div>
+          <button class="sign-up">Sign Up</button>
+        </div>
+        <div class="image-container">
+          <img
+            class="image"
+            src="https://images.pexels.com/photos/774731/pexels-photo-774731.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+            alt=""
+          />
         </div>
       </div>
     </section>
+    <section class="random-information">
+      <div class="random-heading">Some random information</div>
+      <div class="image-box-container">
+        <div class="image-box">
+          <img
+            class="actual-image"
+            src="https://images.pexels.com/photos/45201/kitty-cat-kitten-pet-45201.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+            alt=""
+          />this is some subtext under an illustration or image
+        </div>
+        <div class="image-box">
+          <img
+            class="actual-image"
+            src="https://images.pexels.com/photos/208984/pexels-photo-208984.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+            alt=""
+          />this is some subtext under an illustration or image
+        </div>
+        <div class="image-box">
+          <img
+            class="actual-image"
+            src="https://images.pexels.com/photos/3616232/pexels-photo-3616232.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+            alt=""
+          />this is some subtext under an illustration or image
+        </div>
+        <div class="image-box">
+          <img
+            class="actual-image"
+            src="https://images.pexels.com/photos/977933/pexels-photo-977933.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+            alt=""
+          />this is some subtext under an illustration or image
+        </div>
+      </div>
+    </section>
+    <section class="quote-section">
+      <div class="quote-container">
+        <div class="quote">
+          This is an inspiring quote, or a testimonial from a customer. Maybe
+          it's just filling up sapce, or maybe people will actually read it. Who
+          knows? All I know is that it looks nice.
+        </div>
+        <div class="quote-name">-Thor, God Of Thunder</div>
+      </div>
+    </section>
+    <section class="sign-up-section">
+      <div class="sign-up-container">
+        <div class="left">
+          <div class="sign-up-title">Call to action! It's time!</div>
+          <div class="sign-up-description">
+            Sign up for our product by clicking that button right over there!
+          </div>
+        </div>
+        <div class="right">
+          <button class="sign-up2">Sign Up</button>
+        </div>
+      </div>
+    </section>
+    <footer class="footer">
+      <div class="footer-text">Copyright &#169; The Odin Project 2021</div>
+    </footer>
   </body>
 </html>
